--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -41,15 +41,21 @@ else ifeq ($(platform), osx)
    SHARED := -dynamiclib
    OSXVER = `sw_vers -productVersion | cut -c 4`
    fpic += -mmacosx-version-min=10.1
-else ifeq ($(platform), ios)
+
+# iOS
+else ifneq (,$(findstring ios,$(platform)))
+
    TARGET := $(TARGET_NAME)_libretro_ios.dylib
    fpic := -fPIC
    SHARED := -dynamiclib
 
-   CC = clang -arch armv7 -isysroot $(IOSSDK)
-   CXX = clang++ -arch armv7 -isysroot $(IOSSDK)
-OSXVER = `sw_vers -productVersion | cut -c 4`
-ifneq ($(OSXVER),9)
+   CC = cc -arch armv7 -isysroot $(IOSSDK)
+   CXX = c++ -arch armv7 -isysroot $(IOSSDK)
+ifeq ($(platform),ios9)
+   CC += -miphoneos-version-min=8.0
+   CXX += -miphoneos-version-min=8.0
+   PLATFORM_DEFINES := -miphoneos-version-min=8.0
+else
    CC += -miphoneos-version-min=5.0
    CXX += -miphoneos-version-min=5.0
    PLATFORM_DEFINES := -miphoneos-version-min=5.0
